tests/toy/neg/001524_mutation.toylang
program a = { var if a then sleep; } .
